--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html> <html lang="ko">
+    <head>
+      <title>통계청 주요 지수</title>
+    </head>
+    <body>
+      <img src = "{{ url_for('static', filename='result/employed.png') }}" alt="고용률" height=400 width=680 >
+      <img src = "{{ url_for('static', filename='result/unemployed.png') }}" alt="실업률" height=400 width=680 ><br>
+      <img src = "{{ url_for('static', filename='result/online_shopping.png') }}" alt="온라인쇼핑" height=400 width=680 >
+      <img src = "{{ url_for('static', filename='result/price.png') }}" alt="소비자물가지수" height=400 width=680 >
+    </body>
+</html>
+ 
