--- a/templates/home.html
+++ b/templates/home.html
@@ -412,7 +412,7 @@ blockquote {
 }
 
 .bookmark {
-	text-decoration: none;
+
 	max-height: 8em;
 	padding: 0;
 	display: flex;
@@ -646,6 +646,12 @@ blockquote {
 	<ul id="a709cb60-8885-4d21-81f7-e223b4c29a53" class="bulleted-list">
             <li><a href="/busan_path"> 부산확진자 이동경로</a></li>
         </ul>
+	<ul id="a709cb60-8885-4d21-81f7-e223b4c29a53" class="bulleted-list">
+            <li><a href="/gyeongsan_path"> 경산확진자 이동경로</a></li>
+	</ul>
+	<ul id="a709cb60-8885-4d21-81f7-e223b4c29a53" class="bulleted-list">
+            <li><a href="/pohang_path"> 포항확진자 이동경로</a></li>
+	</ul>
 	<ul id="a709cb60-8885-4d21-81f7-e223b4c29a53" class="bulleted-list">
             <li><a href="/daejeon_path"> 대전확진자 이동경로</a></li>
         </ul>
