--- a/templates/path_daejeon.html
+++ b/templates/path_daejeon.html
@@ -38,150 +38,87 @@ font-size: small;
   </thead>
   <tbody>
     <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>친구야7080</td>
-      <td>서구 가장로 83-3(괴정동)</td>
-      <td>06.02.(수) 16:00~19:30\n06.01.(화) 18:00~06.02.(수) 00:30\n05.30.(일) 17:30~05.31.(월) 00:30\n05.29.(토) 17:30~05.30.(일) 00:30\n05.28.(금) 18:00~05.29.(토) 02:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>포케153</td>
-      <td>서구 대덕대로 244(둔산동)</td>
-      <td>06.02.(수) 17:18경</td>
-      <td>소독예정</td>
-    </tr>
-    <tr>
-      <td>중구</td>
-      <td>목욕탕</td>
-      <td>샤인사우나탕</td>
-      <td>중구 동서대로 1228-8(태평동)</td>
-      <td>06.02.(수) 13:00~15:00\n05.31.(월) 13:00~15:00\n05.30.(일) 13:00~15:00</td>
-      <td>소독예정</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>체육시설</td>
-      <td>도마실국민체육센터(수영장)</td>
-      <td>서구 유등로 235(도마동)</td>
-      <td>06.02.(수) 06:00~07:00\n06.01.(화) 06:00~07:00\n05.28.(금) 06:00~07:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>교육시설</td>
-      <td>새로남기독학교 중등센터</td>
-      <td>서구 만년로68번길 61(만년동)</td>
-      <td>06.01.(화) 07:50~13:30\n05.31.(월) 07:50~16:10\n05.28.(금) 07:50~13:30\n05.27.(목) 07:50~16:10</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
       <td>유성구</td>
-      <td>음식점</td>
-      <td>할매국수(봉명동)</td>
-      <td>유성구 문화원로 140(봉명동)</td>
-      <td>06.01.(화) 12:00경</td>
+      <td>종교시설</td>
+      <td>충만교회(ANI선교회)</td>
+      <td>유성구 테크노8로 9(용산동)</td>
+      <td>06.20.(일) 09:00~12:50\n06.18.(금) 20:00~25:00\n06.16.(수) 20:00~21:00</td>
       <td>소독예정</td>
     </tr>
     <tr>
       <td>서구</td>
       <td>음식점</td>
-      <td>신촌설렁탕 만년점</td>
-      <td>서구 대덕대로 390(만년동)</td>
-      <td>06.01.(화) 12:04경</td>
+      <td>주다방 둔산점</td>
+      <td>서구 대덕대로 185번길 19(둔산동, 2층)</td>
+      <td>06.18.(금) 20:00~25:00</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>중구</td>
-      <td>공공기관</td>
-      <td>국민건강보험공단 대전중부지사</td>
-      <td>중구 보문로 246(대흥동)</td>
-      <td>06.01.(화) 07:00~22:30\n05.31.(월) 08:40~23:20</td>
-      <td>소독예정</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>금융기관</td>
-      <td>현대 하이라이프 손해사정</td>
-      <td>서구 둔산서로 47(둔산동, 6층)</td>
-      <td>05.31.(월) 08:50~18:30</td>
+      <td>음식점</td>
+      <td>금송오리와삼계탕</td>
+      <td>중구 중촌로 28번길 44(중촌동)</td>
+      <td>06.18.(금) 09:00~20:30\n06.17.(목) 09:00~21:00</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>서구</td>
-      <td>음식점</td>
-      <td>논뚜렁밭뚜렁</td>
-      <td>서구 문정로 170번길 5(둔산동)</td>
-      <td>05.30.(일) 18:00~19:30</td>
-      <td>소독예정</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>대박홍두깨손칼국수</td>
-      <td>서구 가장로 94(괴정동)</td>
-      <td>05.30.(일) 16:30~16:57</td>
-      <td>소독예정</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>종교시설</td>
-      <td>새로남교회(만년동)</td>
-      <td>서구 대덕대로 378(만년동, 3층)</td>
-      <td>05.30.(일) 10:30~14:15</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>청사초롱</td>
-      <td>서구 남선로9번길 63-12(탄방동)</td>
-      <td>05.28.(금) 17:50~18:45</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>종교시설</td>
-      <td>동심교회</td>
-      <td>서구 도솔로 338(괴정동)</td>
-      <td>05.26.(수) 19:20~20:30</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>해후순대빈대떡</td>
-      <td>서구 남선로 59번길 24(탄방동)</td>
-      <td>05.26.(수) 10:00~22:0005.25.(화) 07:50~22:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>미쿡식당 갤러리아 타임월드점</td>
-      <td>서구 대덕대로 211(둔산동, 11층)</td>
-      <td>05.25.(화) 13:04경</td>
-      <td>7일경과</td>
-    </tr>
-    <tr>
-      <td>서구</td>
-      <td>음식점</td>
-      <td>코코식당</td>
-      <td>서구 만년남로 3벌길 49(만년동)</td>
-      <td>05.25.(화) 09:00~20:00\n05.23.(일) 09:00~20:00</td>
+      <td>노래방</td>
+      <td>CANADA노래방(캐나다)</td>
+      <td>서구 둔산로73번길 25(둔산동)</td>
+      <td>06.17.(목)19:00~21:00\n06.16.(수)19:00~25:00\n06.15.(화)19:00~25:00\n06.14.(월) 19:00~25:00</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>서구</td>
       <td>사우나</td>
-      <td>갤럭시24시불가마사우나(여탕)</td>
-      <td>서구 갈마중로 12(갈마동)</td>
-      <td>05.25.(화) 12:30~14:30</td>
+      <td>스타비안사우나</td>
+      <td>서구 가장로 77(괴정동)</td>
+      <td>06.16.(수) 13:00~19:00\r\n06.15.(화) 13:00~19:0006.14.(월) 13:00~19:00\n06.13.(일) 13:00~19:00\r\n06.12.(토) 13:00~19:00\r\n06.11.(금) 13:00~19:00\r\n06.10.(목) 13:00~19:0006.09.(수) 13:00~19:00</td>
+      <td>소독완료</td>
+    </tr>
+    <tr>
+      <td>대덕구</td>
+      <td>학원</td>
+      <td>보스톤영수전문학원(강남신수학학원)</td>
+      <td>대덕구 계족산로 81번길 60(송촌동)</td>
+      <td>06.11.(금) 10:20~18:10, 14:00~18:00\n06.10.(목) 14:00~18:00\n06.09.(수) 14:00~18:00</td>
+      <td>소독완료</td>
+    </tr>
+    <tr>
+      <td>대덕구</td>
+      <td>노래방</td>
+      <td>레깅스노래방</td>
+      <td>대덕구 중리로 9(중리동)</td>
+      <td>06.09.(수) 23:55~ 06.10.(목) 02:00</td>
+      <td>소독예정</td>
+    </tr>
+    <tr>
+      <td>유성구</td>
+      <td>음식점</td>
+      <td>국수사랑(엑스포코아 내)</td>
+      <td>유성구 엑스포로 488(전민동)</td>
+      <td>06.10.(목) 08:30~16:00\n06.09.(수) 08:30~16:00\n06.08.(화) 08:00~16:00\n06.07.(월) 08:30~16:00</td>
+      <td>소독완료</td>
+    </tr>
+    <tr>
+      <td>서구</td>
+      <td>노래방</td>
+      <td>파티노래연습장</td>
+      <td>서구 동서대로 1077(내동)</td>
+      <td>06.10.(목) 23:56~ 06.11.(금) 00:50</td>
+      <td>소독완료</td>
+    </tr>
+    <tr>
+      <td>서구</td>
+      <td>노래방</td>
+      <td>미샵노래연습장</td>
+      <td>서구 괴정로 147(용문동)</td>
+      <td>06.10.(목) 21:42~22:35</td>
       <td>소독완료</td>
     </tr>
   </tbody>
 </table>
 </body>
+<button type="button" class="navyBtn" onClick="location.href='/path'">돌아가기</button>
 </html>
