--- a/templates/path_busan.html
+++ b/templates/path_busan.html
@@ -39,231 +39,61 @@ font-size: small;
   </thead>
   <tbody>
     <tr>
-      <td>경상남도</td>
-      <td>진해보건소</td>
-      <td>시외버스</td>
-      <td></td>
-      <td>진해용원버스터미널-&gt; 사상방향\r부산사상버스터미널-&gt; 진해용원방향</td>
-      <td>5.31(월) 15:20분 출발6.01(화) 12:50분 출발</td>
+      <td>부산</td>
+      <td>부산진구</td>
+      <td>pc방</td>
+      <td>수피시방</td>
+      <td>부산진구 중앙대로692번길 22(3,4층)</td>
+      <td>6.14(월) 21:25-23:41</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>부산</td>
       <td>동구</td>
-      <td>병원</td>
-      <td>의료법인정화의료재단 김원묵기념 봉생병원</td>
-      <td>동구 중앙대로 401(좌천동, 봉생병원 구관2층)</td>
-      <td>5.27(목) 12:30-13:38(정신건강의학과 대기실)</td>
+      <td>음식점</td>
+      <td>팔봉이밀면</td>
+      <td>동구 중앙대로320번길 3-10</td>
+      <td>6.16(수) 12:39-13:03</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>부산</td>
-      <td>북구</td>
-      <td>음식점</td>
-      <td>다다삼계탕</td>
-      <td>북구 와석장터로 5</td>
-      <td>5.19(수)-6.1(화)</td>
+      <td>사상구</td>
+      <td>베이커리</td>
+      <td>스마일베이커리</td>
+      <td>사상구 사상로 295(괘법동)</td>
+      <td>2021.06.13.(일) ~ 06.15.(화)방문자는 가까운 보건소에서 코로나 검사 요망</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>부산</td>
-      <td>사하구</td>
-      <td>음식점</td>
-      <td>후생식당</td>
-      <td>사하구 원양로 322(감천동)</td>
-      <td>5.31(월) 12:30-12:50</td>
+      <td>해운대구</td>
+      <td>교통수단</td>
+      <td>SRT</td>
+      <td>동탄역→대전역</td>
+      <td>2021.06.06.(일) 동탄(22:17)~대전(22:52)SRT377 열차1호차 5A 좌석 이용자는 해운대구보건소 연락 바람</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>부산</td>
       <td>동래구</td>
-      <td>당구장</td>
-      <td>신세계당구장</td>
-      <td>동래구 충렬대로181번길 42</td>
-      <td>5.26(수) 20:00-21:005.27(목) 20:00-21:005.28(금) 21:30-22:30</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>동구</td>
       <td>음식점</td>
-      <td>기장멸치쌈밥</td>
-      <td>동구 진시장로 13</td>
-      <td>5.24(월) 14:00-14:26</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>수영구</td>
-      <td>시외버스</td>
-      <td></td>
-      <td>부산서부시외버스터미널-&gt;창원종합버스터미널\r창원종합버스터미널-&gt; 부산서부시외버스터미널\r부산서부시외버스터미널-&gt; 창원종합버스터미널\r창원종합버스터미널-&gt;부산서부시외버스터미널</td>
-      <td>5.26(수) 08:45-09:255.26(수) 12:30-13:105.27(목) 12:15-12:555.27(목) 15:48-16:28</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>중구</td>
-      <td>음식점</td>
-      <td></td>
-      <td>중구 태종로 6</td>
-      <td>5.20(목) 11:30-12:005.21(금) 11:30-12:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>금정구</td>
-      <td>목욕탕</td>
-      <td>옥천사우나(여탕)</td>
-      <td>금정구 수림로62번길 30</td>
-      <td>5.28(금) 06:15-08:455.29(토) 06:00-08:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>북구</td>
-      <td>식품접객업</td>
-      <td>돈N돈 화명점</td>
-      <td>북구 학사로17번가길 10</td>
-      <td>5.25(화) 20:00-20:45</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>부산진구</td>
-      <td>미용실</td>
-      <td>김은혜헤어라인</td>
-      <td>부산진구 엄광로 394-1, 6동 101호</td>
-      <td>5,26(수) 10:00-12:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>북구</td>
-      <td>음식점</td>
-      <td>예가추어탕메기탕</td>
-      <td>북구 금곡대로 303번길 35</td>
-      <td>5.26(수) 18:00-18:30</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산시</td>
-      <td>사상구</td>
-      <td>식당</td>
-      <td>최뼈다구해장국 2호점</td>
-      <td>사상구 광장로 22</td>
-      <td>5.25(화) 12:26~12:38오렌지색후드, 검정바지, 슬리퍼차림 9,500원 현금결제한 남성분은 사상구 보건소 상담바랍니다.</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>남구</td>
-      <td>의원</td>
-      <td>바른이비인후과의원</td>
-      <td>남구 수영로 323, 6층</td>
-      <td>~5.29(토)</td>
+      <td>태능연탄갈비</td>
+      <td>부산 동래구 온천장로107번길 16</td>
+      <td>2021.06.07.(월) 19:17~19:5052,000원 현금결제하신 여성과 일행분은 동래구보건소 상담바람</td>
       <td>소독완료</td>
     </tr>
     <tr>
       <td>부산</td>
       <td>금정구</td>
       <td>음식점</td>
-      <td>소문난돼지국밥</td>
-      <td>금정구 금사로 171</td>
-      <td>5.20(목) 12:30-13:30</td>
+      <td>톤쇼우</td>
+      <td>금정구 금강로 247-10</td>
+      <td>2021.06.07.(월) 11:46~13:04방문자는 인근 보건소 상담</td>
       <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>동구</td>
-      <td>판매업소</td>
-      <td>보생고무</td>
-      <td>동구 조방로 48</td>
-      <td>5.20(목)-5.27(목)</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>사상구</td>
-      <td>택시</td>
-      <td>37바3190</td>
-      <td></td>
-      <td>5.21(금)-5.26(수)</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>부산진구</td>
-      <td>편의점</td>
-      <td>미니스톱부산골든점</td>
-      <td>부산진구 신천대로191(당감동)</td>
-      <td>5.23(일) 14:27-14:52</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>금정구</td>
-      <td>판매점</td>
-      <td>베스킨라빈스 부산대점</td>
-      <td>금정구 부산대학로 53, 1층</td>
-      <td>5.22(토) 16:10-16:51</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>금정구</td>
-      <td>PC방</td>
-      <td>지케이세이프 pc방</td>
-      <td>금정구 구서로 2</td>
-      <td>5.22(토) 14:20-19:43, 36번 좌석            13:58-19:43, 37번 좌석            13:56-17:04, 38번 좌석            15:01-18:35, 47번 좌석5.23(일) 16:17-18:36, 48번 좌석            17:09-18:32, 46번 좌석             18:01-18:36, 53번 좌석</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>강서구</td>
-      <td>음식점</td>
-      <td>가마솥소머리국밥</td>
-      <td>강서구 대저1동 1723-9</td>
-      <td>2021.5.20.(목) 12:12~13:10강서구보건소 상담바람</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>금정구</td>
-      <td>고속버스</td>
-      <td>천일고속(경남70아8287)</td>
-      <td>부산종합버스터미널(금정구)-&gt; 여수행</td>
-      <td>5.24(월) 16:00</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>금정구</td>
-      <td>목욕탕</td>
-      <td>금정탕(남탕)</td>
-      <td>금정구 부곡동 235-13</td>
-      <td>5.20(목) 06:00-07:10</td>
-      <td>소독완료</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>수영구</td>
-      <td>택시</td>
-      <td>택시</td>
-      <td>민락수변공원 인근 -&gt; 부전동 사거리 부근</td>
-      <td>2021.5.20.(목) 04:00~04:20경10,500원 현금 수납하신 택시기사님</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>부산</td>
-      <td>수영구</td>
-      <td>택시</td>
-      <td>택시</td>
-      <td>중앙대로 691번길 5 인근 -&gt; 민락수변공원 부근</td>
-      <td>2021.5.19.(수) 23:50경 ~ 2021.5.20.(목) 01:10경담배3갑으로 수납하신 택시기사님</td>
-      <td>-</td>
     </tr>
   </tbody>
 </table>
 </body>
+<button type="button" class="navyBtn" onClick="location.href='/path'">돌아가기</button>
 </html>
